Add outline summaries and mind map trees for core skills in value creation

--- a/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
+++ b/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
@@ -48,6 +48,43 @@
 				<p>Cuối cùng, cần nhấn mạnh rằng: không có kỹ năng nào trong số này là công thức bắt buộc. Chúng không được đưa ra để áp đặt, mà để gợi mở. Mỗi người sẽ đi qua năm kỹ năng này theo một nhịp độ khác nhau, ở những thời điểm khác nhau của cuộc đời. Điều quan trọng không phải là tuân thủ đầy đủ từng bước, mà là nhận ra mình đang thiếu điều gì, và điều chỉnh một cách có ý thức.</p>
 				<p>Nếu năm kỹ năng này có thể đóng vai trò như một bản đồ, thì bản đồ ấy không nhằm thay thế con đường mà bạn phải tự đi. Nó chỉ giúp bạn định hướng tốt hơn khi cần bắt đầu, và đủ tỉnh táo để dừng lại hoặc rẽ hướng khi hoàn cảnh đã thay đổi. Còn hành trình tạo ra giá trị — như mọi hành trình sống có ý nghĩa — cuối cùng vẫn thuộc về chính bạn.</p>
 			</div>
+
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+				<ul>
+					<li>Giá trị bền vững đến từ năng lực được rèn luyện lâu dài, không ngẫu nhiên.</li>
+					<li>Kỹ năng 1: Học hỏi và tự học là nền tảng tạo năng lực.</li>
+					<li>Kỹ năng 2: Kiên trì giúp đi đủ lâu để giá trị hình thành.</li>
+					<li>Kỹ năng 3: Tự tạo động lực giúp vượt hoàn cảnh bất lợi.</li>
+					<li>Kỹ năng 4: Hình thành thói quen để duy trì hành động ổn định.</li>
+					<li>Kỹ năng 5: “Biết” là tầng điều tiết để thích nghi và không tự bào mòn.</li>
+					<li>Năm kỹ năng liên kết thành một hệ; thiếu mắt xích sẽ dễ lệch hướng.</li>
+					<li>Đây là bản đồ gợi mở, không phải công thức bắt buộc.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+					<pre class="mm-text-tree">
+7. NHỮNG KỸ NĂNG CỐT LÕI ĐỂ XÂY DỰNG GIÁ TRỊ BỀN VỮNG
+├─ Luận điểm trung tâm
+│  └─ Giá trị bền vững đến từ năng lực được rèn luyện lâu dài
+│
+├─ Kỹ năng 1: Học hỏi và tự học
+├─ Kỹ năng 2: Kiên trì
+├─ Kỹ năng 3: Tự tạo động lực
+├─ Kỹ năng 4: Hình thành thói quen
+├─ Kỹ năng 5: Biết
+│
+└─ Tổng kết
+   ├─ Năm kỹ năng tạo thành một hệ liên kết
+   └─ Bản đồ định hướng, không phải công thức bắt buộc
+				</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 	<script src="settings.js"></script>
