--- a/pages/writing-opinion/values-creation/7-0-core-skills-building.html
+++ b/pages/writing-opinion/values-creation/7-0-core-skills-building.html
@@ -47,6 +47,43 @@
 				<p>Finally, it should be emphasized: none of these skills is a mandatory formula. They are not offered as demands, but as invitations. Each person will pass through these five skills at different speeds and at different times in life. What matters is not rigidly following every step, but recognizing what is missing and adjusting with awareness.</p>
 				<p>If these five skills can serve as a map, it is not meant to replace the path you must walk yourself. It only helps you orient when you need to begin, and stay alert enough to stop or turn when circumstances change. The journey of creating value—like every meaningful journey in life—ultimately still belongs to you.</p>
 			</div>
+
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Outline summary notes</h3>
+				<ul>
+					<li>Sustainable value comes from long-trained abilities, not chance.</li>
+					<li>Skill 1: Learning and self-learning as the base capability.</li>
+					<li>Skill 2: Perseverance keeps progress long enough to matter.</li>
+					<li>Skill 3: Self-motivation sustains movement when support fades.</li>
+					<li>Skill 4: Habit formation stabilizes right actions over time.</li>
+					<li>Skill 5: “Knowing” regulates and adapts to context changes.</li>
+					<li>The five skills form a linked system; missing links cause drift.</li>
+					<li>This is a guiding map, not a mandatory formula.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Text mind map (tree)</summary>
+					<pre class="mm-text-tree">
+7. CORE SKILLS FOR BUILDING SUSTAINABLE VALUE
+├─ Central claim
+│  └─ Sustainable value comes from long-trained abilities
+│
+├─ Skill 1: Learning and self-learning
+├─ Skill 2: Perseverance
+├─ Skill 3: Self-motivation
+├─ Skill 4: Habit formation
+├─ Skill 5: Knowing
+│
+└─ Summary
+   ├─ Five skills form a linked system
+   └─ A guiding map, not a mandatory formula
+				</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 	<script src="settings.js"></script>
