--- a/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1-vn.html
+++ b/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1-vn.html
@@ -61,6 +61,50 @@
             <p>Học mà không phản chiếu dễ biến thành lặp lại máy móc; phản chiếu mà không hành động lại trở thành suy tưởng trừu tượng. Chỉ khi hành động và phản chiếu song hành, tri thức mới được hình thành, năng lực mới được mở rộng, và giá trị mới có thể được tạo ra một cách bền vững.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Học hỏi và tự học là nền tảng để tạo ra giá trị.</li>
+                <li>Kiến thức cần được chuyển hóa thành hành động mới tạo ra giá trị.</li>
+                <li>Học tập không giới hạn trong trường lớp; trải nghiệm đời sống cũng là thầy.</li>
+                <li>Học là quá trình tái cấu trúc bản thân, thường đi kèm khó chịu.</li>
+                <li>Ba vùng trải nghiệm: Thoải mái, Học hỏi, Hoảng loạn.</li>
+                <li>Vòng xoay định mệnh: thế giới quan → bản sắc → giá trị → tư duy → hành vi → thói quen → tính cách → định mệnh.</li>
+                <li>Phản chiếu giúp trải nghiệm trở thành tri thức, hành động đi cùng hiểu sâu.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+KỸ NĂNG 1 - KHẢ NĂNG HỌC HỎI VÀ TỰ HỌC
+├─ Vai trò nền tảng của học hỏi
+│  └─ Kiến thức là điều kiện cần; hành động tạo giá trị
+│
+├─ Học tập không giới hạn trường lớp
+│  └─ Xã hội, công việc, thất bại đều là người thầy
+│
+├─ Học là tái cấu trúc bản thân
+│  └─ Khó chịu là dấu hiệu phát triển
+│
+├─ Ba vùng trải nghiệm
+│  ├─ Thoải mái → trì trệ
+│  ├─ Học hỏi → phát triển
+│  └─ Hoảng loạn → học kém hiệu quả
+│
+├─ Vòng xoay định mệnh
+│  └─ Thế giới quan → bản sắc → giá trị/niềm tin → tư duy → suy nghĩ → hành vi → thói quen → tính cách → định mệnh
+│
+└─ Phản chiếu
+   ├─ Biến trải nghiệm thành tri thức
+   └─ Hành động + phản chiếu → năng lực bền vững
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
