--- a/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1.html
+++ b/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1.html
@@ -61,6 +61,50 @@
             <p>Learning without reflection easily becomes mechanical repetition; reflection without action becomes abstract speculation. Only when action and reflection go together can knowledge be formed, capability expanded, and value created sustainably.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Learning and self-learning are the foundation for creating value.</li>
+                <li>Knowledge must be transformed into action to become value.</li>
+                <li>Learning is not limited to school; life experience is also a teacher.</li>
+                <li>Learning restructures the self and often feels uncomfortable.</li>
+                <li>Three zones: Comfort, Stretch, Panic.</li>
+                <li>The destiny loop: worldview → identity → values/beliefs → thinking → thoughts → behavior → habits → character → destiny.</li>
+                <li>Reflection turns experience into knowledge and deepens understanding.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+SKILL 1 - THE ABILITY TO LEARN AND SELF-LEARN
+├─ Foundational role of learning
+│  └─ Knowledge is necessary; action creates value
+│
+├─ Learning beyond school
+│  └─ Society, work, and failure are teachers
+│
+├─ Learning as self-restructuring
+│  └─ Discomfort is a sign of growth
+│
+├─ Three experience zones
+│  ├─ Comfort → stagnation
+│  ├─ Stretch → growth
+│  └─ Panic → ineffective learning
+│
+├─ Destiny loop
+│  └─ Worldview → identity → values/beliefs → thinking → thoughts → behavior → habits → character → destiny
+│
+└─ Reflection
+   ├─ Turns experience into knowledge
+   └─ Action + reflection → sustainable capability
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
