--- a/pages/writing-opinion/values-creation/7-2-core-skills-building-skill-2-vn.html
+++ b/pages/writing-opinion/values-creation/7-2-core-skills-building-skill-2-vn.html
@@ -52,6 +52,43 @@
             <p>Những hành động như vậy cho thấy rằng: có những việc con người làm không phải vì muốn, mà vì tin rằng cần phải làm. Và chính khả năng kiên trì với những điều “cần”, dù không dễ chịu, mới là nền tảng sâu xa nhất của mọi giá trị có ý nghĩa lâu dài.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Giá trị hình thành từ tiến trình chậm, lặp lại và dài hạn.</li>
+                <li>Không có giá trị bền vững nếu thiếu kiên trì.</li>
+                <li>Kiên trì không đồng nghĩa kiệt sức; là ở lại đủ lâu với con đường đã chọn.</li>
+                <li>Đam mê giúp khởi đầu, nhưng kiên trì mới đi qua giai đoạn khó khăn.</li>
+                <li>Kiên trì nằm trong những hành động âm thầm, không ai ca ngợi (Shawshank).</li>
+                <li>Kiên trì gắn với lý tưởng, vượt lên cảm xúc cá nhân.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+KỸ NĂNG 2 - KIÊN TRÌ
+├─ Kiên trì như điều kiện để giá trị hình thành
+│  └─ Tiến trình chậm, lặp lại → giá trị bền vững
+│
+├─ Kiên trì không đồng nghĩa với kiệt sức
+│  └─ Ở lại đủ lâu, tập trung, tích lũy chiều sâu
+│
+├─ Giới hạn của đam mê
+│  └─ Đam mê khởi đầu; kiên trì vượt khó kéo dài
+│
+├─ Kiên trì trong hành động âm thầm
+│  └─ Shawshank: bền bỉ qua việc lặp lại khó chịu
+│
+└─ Kiên trì vượt lên cảm xúc cá nhân
+   └─ Lý tưởng giữ con người ở lại với điều “cần”
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
