--- a/pages/writing-opinion/values-creation/7-2-core-skills-building-skill-2.html
+++ b/pages/writing-opinion/values-creation/7-2-core-skills-building-skill-2.html
@@ -52,6 +52,43 @@
             <p>Such actions show that there are things people do not because they want to, but because they believe they must. And the ability to persevere with what is “necessary,” even when it is not pleasant, is the deepest foundation of any value with lasting meaning.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Value forms through slow, repeated progress over time.</li>
+                <li>No sustainable value exists without perseverance.</li>
+                <li>Perseverance is staying long enough, not exhausting oneself.</li>
+                <li>Passion helps start; perseverance carries through hard phases.</li>
+                <li>Quiet, unpraised actions are where perseverance is tested.</li>
+                <li>Perseverance ties to ideals that go beyond personal emotion.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+SKILL 2 - PERSEVERANCE
+├─ Perseverance as the condition for value to form
+│  └─ Slow, repeated progress → sustainable value
+│
+├─ Perseverance does not mean exhaustion
+│  └─ Stay long enough; focus builds depth
+│
+├─ Limits of passion
+│  └─ Passion starts; perseverance endures
+│
+├─ Perseverance in quiet actions
+│  └─ Shawshank: repeated, hard, unpraised work
+│
+└─ Perseverance beyond personal emotion
+   └─ Ideals keep people with what is “necessary”
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
