--- a/pages/writing-opinion/values-creation/7-3-core-skills-building-skill-3-vn.html
+++ b/pages/writing-opinion/values-creation/7-3-core-skills-building-skill-3-vn.html
@@ -56,6 +56,43 @@
             <p>Vì vậy, giữ tư duy tích cực không phải để né tránh thực tế, mà để đủ tỉnh táo và vững vàng đối diện với thực tế. Đó là điều kiện cần để động lực không cạn kiệt, kiên trì không bị bào mòn, và giá trị có thể được hình thành một cách lành mạnh và bền vững.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Điểm tựa nội tại là yếu tố quyết định khi hỗ trợ bên ngoài biến mất.</li>
+                <li>Sự công nhận bên ngoài mong manh; nội lực giữ giá trị bền lâu.</li>
+                <li>Động lực quyết định cách ta đứng dậy sau thất bại.</li>
+                <li>Động lực là nền tảng sâu xa của kiên trì.</li>
+                <li>Tư duy tích cực đúng nghĩa giúp bảo toàn năng lượng và sự sáng suốt.</li>
+                <li>Tránh lạc quan mù quáng; tích cực để đối diện thực tế vững vàng.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+KỸ NĂNG 3 - TỰ TẠO ĐỘNG LỰC
+├─ Điểm tựa tinh thần
+│  └─ Nội lực là yếu tố quyết định
+│
+├─ Giới hạn của sự công nhận bên ngoài
+│  └─ Khi ủng hộ mất đi, chỉ nội lực giữ ta đứng vững
+│
+├─ Động lực trong thất bại
+│  └─ Tự vực dậy khi không còn ai thúc đẩy
+│
+├─ Động lực và kiên trì
+│  └─ Động lực trả lời “vì sao” để tiếp tục
+│
+└─ Tư duy tích cực (hiểu đúng)
+   └─ Ổn định nội tâm, đối diện thực tế, giữ năng lượng
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
