--- a/pages/writing-opinion/values-creation/7-3-core-skills-building-skill-3.html
+++ b/pages/writing-opinion/values-creation/7-3-core-skills-building-skill-3.html
@@ -56,6 +56,43 @@
             <p>Therefore, keeping a positive mindset is not about escaping reality, but about staying clear and steady enough to face reality. It is a necessary condition for motivation not to run dry, perseverance not to be eroded, and value to be formed in a healthy and sustainable way.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>An inner anchor is decisive when external support fades.</li>
+                <li>External recognition is fragile; inner strength sustains value.</li>
+                <li>Motivation determines how we recover after failure.</li>
+                <li>Motivation is the deeper foundation of perseverance.</li>
+                <li>Positive thinking, rightly understood, preserves energy and clarity.</li>
+                <li>Avoid blind optimism; stay steady to face reality.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+SKILL 3 - SELF-MOTIVATION
+├─ Inner anchor
+│  └─ Inner strength is decisive
+│
+├─ Limits of external recognition
+│  └─ Support fades; only inner strength sustains
+│
+├─ Motivation and failure
+│  └─ Self-recovery when no one pushes
+│
+├─ Motivation and perseverance
+│  └─ Answers the deeper “why” to continue
+│
+└─ Positive thinking (rightly understood)
+   └─ Stability to face reality and preserve energy
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
