--- a/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4-vn.html
+++ b/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4-vn.html
@@ -72,6 +72,49 @@
             <p>Cuộc sống không đứng yên. Khi hoàn cảnh và mục tiêu thay đổi, những thói quen từng hữu ích cũng cần được điều chỉnh. Thói quen không phải là nguyên tắc bất biến, mà là những công cụ sống – cần được xem xét và thích nghi theo từng giai đoạn của đời người.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Thói quen tạo cơ chế gần tự động giúp hành động ổn định.</li>
+                <li>Thói quen được kích hoạt bởi tín hiệu và bối cảnh lặp lại.</li>
+                <li>Ưu tiên thói quen tốt để thu hẹp không gian thói quen xấu.</li>
+                <li>Con người không hoàn hảo; chấp nhận mức độ không hoàn hảo hợp lý.</li>
+                <li>Hệ sinh thái thói quen nền tảng: hiện tại, ngủ đủ, tò mò, phản biện, tĩnh lặng, vận động, ăn uống ý thức.</li>
+                <li>Thói quen là công cụ sống, cần điều chỉnh theo bối cảnh.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+KỸ NĂNG 4 - HÌNH THÀNH THÓI QUEN
+├─ Thói quen như cơ chế gần tự động
+│  └─ Ổn định hành động tạo giá trị
+│
+├─ Cơ chế hình thành thói quen
+│  └─ Chuỗi phản ứng được kích hoạt bởi tín hiệu
+│
+├─ Giới hạn và sự không hoàn hảo
+│  └─ Chấp nhận mức độ không hoàn hảo hợp lý
+│
+├─ Hệ sinh thái thói quen nền tảng
+│  ├─ Hành động trong hiện tại
+│  ├─ Ngủ đủ và dậy sớm
+│  ├─ Tò mò và khám phá
+│  ├─ Tư duy phản biện
+│  ├─ Tĩnh lặng cho tâm trí
+│  ├─ Vận động
+│  └─ Ăn uống khoa học và ý thức
+│
+└─ Thói quen như công cụ sống
+   └─ Điều chỉnh theo bối cảnh và mục tiêu
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
