--- a/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4.html
+++ b/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4.html
@@ -72,6 +72,49 @@
             <p>Life does not stand still. When circumstances and goals change, habits that were once useful also need adjustment. Habits are not immutable principles, but living tools—meant to be reviewed and adapted across different stages of life.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Habits create a near-automatic mechanism for steady action.</li>
+                <li>Habits form through cues and repeated context.</li>
+                <li>Build good habits to reduce the space for bad ones.</li>
+                <li>Humans are imperfect; accept manageable imperfections.</li>
+                <li>Foundational habit ecosystem: present action, sleep, curiosity, critical thinking, stillness, movement, mindful eating.</li>
+                <li>Habits are living tools that must adapt to changing contexts.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+SKILL 4 - HABIT FORMATION
+├─ Habit as a near-automatic mechanism
+│  └─ Steady action without constant willpower
+│
+├─ Habit formation mechanism
+│  └─ Cue-triggered response loops
+│
+├─ Limits and necessary imperfection
+│  └─ Accept imperfections without eroding core values
+│
+├─ Foundational habit ecosystem
+│  ├─ Act in the present
+│  ├─ Sleep enough and wake early
+│  ├─ Curiosity and exploration
+│  ├─ Critical thinking
+│  ├─ Mental stillness
+│  ├─ Movement
+│  └─ Mindful eating
+│
+└─ Habits as living tools
+   └─ Review and adapt across life stages
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
