--- a/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5-vn.html
+++ b/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5-vn.html
@@ -63,6 +63,47 @@
             <p>Giữa hành động và dừng lại, giữa tiến lên và lùi bước, giữa tham vọng và giới hạn, chính sự “biết” là thứ giữ cho con người còn nguyên khả năng lựa chọn. Và chỉ khi còn khả năng lựa chọn, ta mới thực sự làm chủ hành trình tạo ra giá trị của chính mình.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Thói quen cần được soi chiếu; điều đúng hôm qua có thể sai hôm nay.</li>
+                <li>“Biết” là tầng nhận thức dẫn đường cho hành động.</li>
+                <li>“Biết” giúp phân biệt khi nào tiếp tục, khi nào dừng lại.</li>
+                <li>Giữa khôn và dại: ứng xử phù hợp hoàn cảnh, không cố tỏ ra khôn.</li>
+                <li>“Biết” hình thành từ trải nghiệm sống, không phải công thức.</li>
+                <li>Biết đủ để không tự bào mòn; nghỉ đúng lúc để đi xa hơn.</li>
+                <li>“Biết” giữ quyền lựa chọn, giúp đi đúng hướng và đủ lâu.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+KỸ NĂNG 5 - BIẾT
+├─ Giới hạn của thói quen
+│  └─ Cần tầng nhận thức cao hơn để điều chỉnh
+│
+├─ “Biết” như năng lực dẫn đường
+│  └─ Trả lời: có nên tiếp tục cách làm cũ không?
+│
+├─ Giữa khôn và dại
+│  └─ Ứng xử phù hợp hoàn cảnh
+│
+├─ “Biết” từ trải nghiệm
+│  └─ Trí tuệ sống mài giũa theo năm tháng
+│
+├─ Biết đủ
+│  └─ Dừng đúng lúc để không tự bào mòn
+│
+└─ Kết
+   └─ “Biết” giữ quyền lựa chọn và hướng đi bền vững
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
