--- a/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5.html
+++ b/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5.html
@@ -63,6 +63,46 @@
             <p>Between acting and stopping, between moving forward and stepping back, between ambition and limitation, “knowing” is what preserves our capacity to choose. And only when that capacity remains do we truly own our journey of creating value.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Habits need a higher layer of awareness; what was right can become wrong.</li>
+                <li>“Knowing” guides action and answers whether to continue.</li>
+                <li>Between clever and foolish: respond appropriately to context.</li>
+                <li>“Knowing” is lived wisdom refined through experience.</li>
+                <li>Knowing enough prevents self‑exhaustion and enables long-term progress.</li>
+                <li>“Knowing” preserves the capacity to choose and stay on the right path.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+SKILL 5 - KNOWING
+├─ Limits of habit
+│  └─ Needs a higher layer to adjust
+│
+├─ “Knowing” as a guiding capacity
+│  └─ Answers whether to continue the same way
+│
+├─ Between clever and foolish
+│  └─ Appropriate response to context
+│
+├─ “Knowing” from experience
+│  └─ Lived wisdom refined over time
+│
+├─ Knowing enough
+│  └─ Rest at the right time to go farther
+│
+└─ Conclusion
+   └─ “Knowing” preserves choice and direction
+                </pre>
+            </details>
+        </div>
+
     </section>
 </article>
 <script src="settings.js"></script>
